Primer commit, se agrega estructura de la pagina en html, hoja de estilos para los elementos, funciones y demas en el archivo javascript. La carpeta logo contiene el logo de Alura Latam.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <p>Ingresa el texto que desees encriptar o desencriptar</p>
         </div>
         <p id="output-text"></p>
-        <div>
+        <div id="CopyBtn" >
           <button id="copiar" class="btn" onclick="copiarTexto()" >Copiar</button>
         </div>
       </div>
